--- a/style.css
+++ b/style.css
@@ -166,13 +166,4 @@ body {
     margin: 20px 0;
 }
 
-@media only screen and (max-width: 980px) {
-    .container {
-
-        padding: 60px 0 40px;
-        border-radius: 30px;
-        margin: 0 10px;
-        background: #eeeeee;
-        box-shadow: 0 0 20px rgba(0, 0, 0, .1);
-    }
-}
+@media only screen and (max-width: 980px) {}
