--- a/style.css
+++ b/style.css
@@ -3,31 +3,120 @@
     padding: 0;
     border: 0;
     outline: 0;
-
+    scroll-behavior: smooth;
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #3988b3;
+    background: #000000;
+    font: 700 16px 'Montserrat';
 }
 
+/*
+    Nav
+*/
+nav {
+    padding: 10px 0;
+}
+
+nav ul {
+    color: #fafafa;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+nav ul li {
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
+nav ul li a {
+    color: #AAAAAA;
+    text-align: center;
+    text-decoration: none;
+}
+
+nav ul li:hover a {
+    color: #FAB21D;
+}
+
+/*
+    Container
+*/
 .container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/*
+    SECTION PRESENTATION
+*/
+#presentation {
+    display: flex;
+    margin: 100px 0;
+}
+
+#presentation #presentationInfos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+h1 {
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 60px;
+}
+
+#presentation p {
+    color: #AAAAAA;
+    font-size: 20px;
+}
+
+#presentation img {
+    width: 450px;
+    height: 450px;
+    border-radius: 50%;
+}
+
+#presentation button {
+    background-color: #FAB21D;
+    font-size: large;
+    padding: 15px 10px;
+    font-weight: bold;
+    border-radius: 30px;
+    width: 250px;
+}
+
+/*
+    Section Dice
+*/
+#sectionDice {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/*
+Dice Styles
+*/
+.containerDice {
     display: grid;
     place-items: center;
     width: 250px;
     height: 300px;
     padding: 60px 0 40px;
     border-radius: 30px;
-    background: #eeeeee;
+    background: #000000;
     box-shadow: 0 0 20px rgba(0, 0, 0, .1);
 }
 
-/*
-    Dice Styles
-*/
 .dice {
     position: relative;
     width: 100px;
@@ -144,18 +233,19 @@ body {
 */
 .roll {
     cursor: pointer;
-    color: #3988b3;
+    color: #FAB21D;
     margin-top: 60px;
     padding: 6px 12px;
     border-radius: 3px;
     font: 700 16px 'Montserrat';
-    border: 2px solid #3988b3;
+    border: 2px solid #FAB21D;
+    background-color: #000000;
     transition: .2s;
 }
 
 .roll:hover {
-    color: #fff;
-    background: #3988b3;
+    color: #000000;
+    background: #FAB21D;
 }
 
 /*
@@ -164,6 +254,86 @@ body {
 .message {
     font: 700 16px 'Montserrat';
     margin: 20px 0;
+    color: #AAAAAA;
 }
 
-@media only screen and (max-width: 980px) {}
+/******************** BURGER MENU ****************************/
+.burger {
+    display: none;
+}
+
+@media screen and (max-width: 1000px) {
+
+    .burger {
+        display: block;
+        position: absolute;
+        width: 32px;
+        height: 24px;
+        right: 35px;
+        top: 40px;
+        cursor: pointer;
+    }
+
+    .burger span {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        background-color: #ffffff;
+        transform: translateY(-50%);
+        transition: background-color 0.5s ease-in-out;
+    }
+
+    .burger span::before,
+    .burger span::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        background-color: #ffffff;
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .burger span::before {
+        transform: translateY(-10px);
+    }
+
+    .burger span::after {
+        transform: translateY(10px);
+    }
+
+    .burger.active span {
+        background-color: transparent;
+    }
+
+    .burger.active span::before {
+        transform: translateY(0) rotateZ(45deg);
+    }
+
+    .burger.active span::after {
+        transform: translateY(0) rotateZ(-45deg);
+    }
+
+    .right-part-line-bar {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        width: 100%;
+        top: 75px;
+        left: -100%;
+        background-color: #000000;
+        transition: left 0.8s ease-in-out;
+    }
+
+    .right-part-line-bar li {
+        text-align: center;
+    }
+
+    .responsive-show-menu {
+        width: 100%;
+        padding: 0;
+        left: 0px;
+        transition: left 0.8s ease-in-out;
+    }
+}
