--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     position: fixed;
     z-index: 1000;
     bottom: 10px;
-    right: 0px;
+    right: 20px;
     width: 30px;
     height: 30px;
     border: solid 2px #2a2a2a;
@@ -450,6 +450,12 @@ span.h2-line {
         padding: 0;
         left: 0px;
         transition: left 0.8s ease-in-out;
+    }
+
+    #presentation img {
+        width: 250px;
+        height: 250px;
+        border-radius: 50%;
     }
 
     .container {
