--- a/style.css
+++ b/style.css
@@ -11,10 +11,12 @@ body {
     background: #000000;
     font: 700 16px 'Montserrat';
 }
-.hidden{
+
+.hidden {
     display: none;
 }
-.visible{
+
+.visible {
     display: block;
 }
 
@@ -105,6 +107,36 @@ h1 {
     margin-top: 100px;
     margin-bottom: 60px;
     text-align: center;
+}
+
+#choisisRepas {
+    margin-top: 100px;
+    margin-bottom: 60px;
+    text-align: center;
+}
+
+#commande li {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#commande li p {
+    margin: 10px 0;
+}
+
+#commande li .dateCommande {
+    border: solid 2px #FAB21D;
+    margin-right: 5px;
+    padding: 5px;
+    border-radius: 20px 0px 20px 0px;
+}
+
+#commande li .usernameCommande {
+    color: #AAAAAA;
+    margin-right: 5px;
 }
 
 #presentation p {
